--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,11 +1,13 @@
-
-<nav>
+<div class="topnav" id="topnav">
+ <nav>
     {% for item in site.data.navigation %}
       <a class= "{% if page.url == item.link %} active {% endif %}" href="{{ item.link }}" >
         {{ item.title }}
       </a>
     {% endfor %}
+    
   </nav>
+</div>
 
 
   <!--<nav>
@@ -13,3 +15,19 @@
     <a href="/about/">About</a>
     <a href="/animation/">Animation</a>
   </nav> -->
+
+  <script>
+    //Select the nav
+    const navbar = document.getElementById('topnav');
+    window.onscroll = function() {scrollFunction()};
+ 
+function scrollFunction() {
+  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+    
+    navbar.classList.add('transnav'); // Adds a transparent class
+  } else {
+   
+    navbar.classList.remove('transnav') // Remove the transparency class
+  }
+}
+</script>
