--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -4,10 +4,16 @@
 $mainColor1: rgb(134, 40, 40);
 
 .topnav {
-    width: 1920px;
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    padding: 0%;
+    margin: 0px;
     background-color: rgb(54, 54, 54);
     font-family: Arial, Helvetica, sans-serif;
+    z-index: 2;
     overflow: hidden;
+    transition: ease-in-out 1s;
     
 }
 
@@ -17,8 +23,10 @@ color: aliceblue;
    float: right;
    text-align: center;
    padding: 18px 18px;
+   //padding-left: 10px;
    text-decoration: none; 
    font-size: 17px;
+   transition: 1s;
 
 }
 
@@ -32,7 +40,15 @@ color: aliceblue;
 
     color: orangered;
     background-color: rgb(177, 177, 177);
+    
 
+}
+
+.transnav {
+
+    opacity: 0.5;
+    transition: opacity 1s;
+    
 }
 
 /*.top-page {
@@ -46,10 +62,12 @@ color: aliceblue;
 } */
 
 #top-video-container{
-
+     
+    //padding-top: 28px;
     width: 100%;
     height: auto;
     background-color: $mainColor1;
+    overflow: hidden;
 
   iframe{
     
@@ -59,20 +77,30 @@ color: aliceblue;
   }
 
   video{
-    position: absolute;
+   /* position: absolute;
     top: 50%;
     left: 50%;
     min-width: 100%;
     min-height: 100%;
     width: auto;
     height: auto;
-    z-index: -100;
-    transform: translate(-50%, -50%);
+    z-index: -1;
+    transform: translate(-50%, -50%);*/
+    
+    position: relative; //absolute + top gives me control over exact px location relative seems to work better
+    top: 56px;
+    max-width: 100%;
+    height: auto;
+    //z-index: -100;
+
+    
   }
 
 }
 
 body{
+    
+    margin: 0px;
     background-color: $col-gray;
     font-family: $font-robo; 
 }
