--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,5 +1,7 @@
 @import 'typography';
 @import 'colors';
+@import 'subheader';
+@import 'home-circles';
 
 $mainColor1: rgb(134, 40, 40);
 
@@ -96,11 +98,19 @@ color: aliceblue;
     
   }
 
+  video.loading{
+  
+    background-image: url(assets\images\onLoad\loaderHead.webp);
+    background-size:100%;
+    background-position: center;
+
+  }
+
 }
 
 body{
     
     margin: 0px;
-    background-color: $col-gray;
+    background-color: white;
     font-family: $font-robo; 
 }
