--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
 <body>
-
+    <div id="loader" class="centerLoad"></div>
        {% include navigation.html %}
-    
+       
     
     <div class="top-page">
        
@@ -20,5 +20,17 @@
 
     </div>
     {{ content }}
+  <!-- loadingpage script -->
+
+    <script>document.onreadystatechange = function() {
+          if (document.readyState !== "complete") {
+            document.querySelector("body").style.visibility = "hidden";
+            document.querySelector("#loader").style.visibility = "visible";
+          }  else {
+            document.querySelector("#loader").style.display = "none";
+            document.querySelector("body").style.visibility = "visible";
+          }
+      };
+    </script>
 </body>
 </html>
