--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
 <body>
-    <div id="loader" class="centerLoad"></div>
+    <div id="loader" class="centerLoad"> <img src="assets\images\onLoad\loaderHeadcrop.gif" alt="LOADING"></div>
        {% include navigation.html %}
        
     
@@ -25,10 +25,12 @@
     <script>document.onreadystatechange = function() {
           if (document.readyState !== "complete") {
             document.querySelector("body").style.visibility = "hidden";
+            document.querySelector("body").style.overflow = "hidden";
             document.querySelector("#loader").style.visibility = "visible";
           }  else {
             document.querySelector("#loader").style.display = "none";
             document.querySelector("body").style.visibility = "visible";
+            document.querySelector("body").style.overflow = "";
           }
       };
     </script>
