--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -7,27 +7,43 @@ $mainColor1: rgb(134, 40, 40);
 
 //Loading
 #loader {
-  border: 12px solid #f3f3f3;
-  border-radius: 50%;
-  border-top: 12px solid #444444;
-  width: 70px;
-  height: 70px;
-  animation: spin 1s linear infinite;
+  // border: 12px solid #f3f3f3;
+  // border-radius: 50%;
+  // border-top: 12px solid #444444;
+  // width: 70px;
+  // height: 70px;
+  // animation: spin 1s linear infinite;
+
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  pointer-events: none;
+  z-index: 5;
+
 }
 
-@keyframes spin {
-  100% {
-      transform: rotate(360deg);
-  }
-}
+// @keyframes spin {
+//   100% {
+//       transform: rotate(360deg);
+//   }
+// }
 
 .centerLoad {
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
   margin: auto;
+img{
+
+  max-width: 50%;
+  height: auto;
+  object-position: center;
+  margin: 25%;
+}
+
 }
 //End Loading
 
