--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -4,5 +4,5 @@
 
 
 @import "main";
-@import "bootstrap-5.1.3/assets/stylesheets/bootstrap";
+//@import "bootstrap-5.1.3/assets/stylesheets/bootstrap";
 //@import "bootstrap";
