Portfolio Page and Mobile Update

--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 ---
+<script type="text/javascript" src="../assets/js/lightbox.js"></script>
+<link rel="stylesheet" href="../assets/css/lightbox.css">
 
 <div class="portfolio-page">
   
@@ -8,5 +10,3 @@ layout: default
 
 </div>
 
-<script type="text/javascript" src="assets/js/lightbox.js"></script>
-<link rel="stylesheet" href="assets/css/lightbox.css">
