--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -3,6 +3,7 @@
 @import 'subheader';
 @import 'home-circles';
 @import 'gridy-menu';
+@import 'portfolio-basic';
 
 $mainColor1: rgb(134, 40, 40);
 
