--- a/_sass/portfolio-basic.scss
+++ b/_sass/portfolio-basic.scss
@@ -70,6 +70,7 @@
         margin-top: 25px;
         height: auto;
         background-color: rgb(87, 87, 87);
+        overflow-x: hidden;
     
         h1{
            margin-top: 25px;
