--- a/_sass/portfolio-basic.scss
+++ b/_sass/portfolio-basic.scss
@@ -9,6 +9,7 @@
     align-items: center;
     margin-top: 50px;
     height: auto;
+    overflow-x: hidden;
     background-color: rgb(87, 87, 87);
 
     h1{
@@ -37,7 +38,7 @@
 
 .thumb-gallery{
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     flex-wrap: wrap;
     width: 100%;
     max-width: 1920px;
@@ -74,7 +75,7 @@
     
         h1{
            margin-top: 25px;
-           font-size: 4rem;
+           font-size: 2rem;
            color: rgb(73, 73, 73);
     
         }
